# my_malloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: calculator.hpp  mymalloc.h
include/my_malloc/: ThreadHeap.hpp  syscall.hpp
include/my_malloc/internal/: AllocSlab.hpp  MappedSegment.hpp  SlabConfig.hpp  definitions.hpp
include/my_malloc/sys/: mman.hpp  syscall.hpp
src/: AllocSlab.cpp  CMakeLists.txt  MappedSegment.cpp  SlabConfig.cpp  ThreadHeap.cpp  calculator.cpp  mymalloc.c
tests/: CMakeLists.txt  test_AllocSlab.cpp  test_MappedSegment.cpp  test_SlabConfig.cpp  test_ThreadHeap_destructor.cpp  test_acquire_slab.cpp  test_allocate.cpp  test_calculator.cpp  test_coalescing.cpp  test_free_large_slab.cpp  test_lifecycle_e2e.cpp  test_main.c  test_mman.cpp  test_recycling.cpp  test_simple_add.c  test_small_objects.cpp
